Reescreve o guia de migração Java e corrige layout do banner no mobile
Guia de atualizações do Java, agora como documentação profissional:
- sem emojis e sem índice duplicado (o sumário lateral cobre a navegação)
- todo código e configuração explicados (jdeps/jdeprscan, --release vs
  source/target, toolchain, flags de GC e de container, probes do K8s,
  matriz de CI, JFR/GC logs, OWASP, BOM, playbook de migração)
- abrangência restaurada: matriz de compatibilidade completa com pontos
  de atenção por salto, custos e licenças (GPL+CE, OTN, NFTC), segurança
  por versão, tuning por cenário, projetos futuros com exemplos, FAQ,
  glossário e referências comentadas
- fatos corrigidos: release na 3ª terça-feira, LTS a cada 2 anos,
  licenciamento Oracle atual, flag ZGenerational, Security Manager
  desativado no 24; tabelas de benchmark inventadas removidas

Mobile:
- capa do banner de post vazava por baixo das ondas (altura fixa vs
  container responsivo) — faixa escura corrigida
- hero: título menor no mobile e temas só a partir de md (o bloco
  estourava o banner de 3/4 de altura)
- chip de categoria do card mobile alargado ("Exercícios resolvidos")

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>